# rpmautospec

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .yamllint-ansible.yml  .zuul.yaml  LICENSE  MANIFEST.in  README.rst  generate_changelog.py  next_build.py  pyproject.toml  python-rpmautospec.spec  renovate.json  requirements.txt  rpmautospec.py  run-rpmautospec.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: main.yaml
ci/: pre-commit.yaml  pytest.yaml  rpmbuild.yaml
doc/: autochangelog.rst  autorel.rst  autorelease.rst  conf.py  deploying.rst  index.rst  install.rst  opting-in.rst  peculiarities.rst  principle.rst
doc/_static/: custom.css
doc/examples/: README.md  autorel-function-hdr.txt  autorelease-function-hdr.txt  changelog-accumulated.txt  changelog-tagged-only.txt  macros.autorel  macros.autorelease  test-autorel-extraver-snapshot.spec  test-autorel-extraver.spec  test-autorel-hotfix.spec  test-autorel-omnibus.spec  test-autorel-prerelease.spec  test-autorel-snapshot.spec  test-autorel.spec  test-autorelease-baserelease.spec  test-autorelease-extraver-snapshot.spec  test-autorelease-extraver.spec  test-autorelease-hotfix.spec  test-autorelease-omnibus.spec  test-autorelease-prerelease.spec  test-autorelease-snapshot.spec  test-autorelease.spec
koji_plugin/: rpmautospec_plugin.py  rpmautospec_process_distgit_plugin.py  tag_in_pagure_plugin.py
koji_plugins/: rpmautospec_builder.py  rpmautospec_hub.conf  rpmautospec_hub.py
rpm/macros.d/: macros.rpmautospec
rpm_macros.d/: macros.rpmautospec
rpmautospec/: __init__.py  changelog.py  cli.py  compat.py  exc.py  magic_comments.py  misc.py  pager.py  pkg_history.py  process_distgit.py  release.py  specparser.py  tag_package.py  util.py  version.py
rpmautospec/_wrappers/: __init__.py  common.py
rpmautospec/_wrappers/minigit2/: blob.py  config.py  native_adaptation.py  object_.py  reference.py  repository.py  wrapper.py
rpmautospec/_wrappers/minirpm/: __init__.py
rpmautospec/_wrappers/minirpm/_rpm/: __init__.py  exc.py  header.py  native_adaptation.py  spec.py  toplevel.py
rpmautospec/cli/: base.py  click.py  dispatch.py  minimal.py
rpmautospec/etc/: autorel-macro.txt  autorelease-macro.txt
rpmautospec/minigit2/: __init__.py  blob.py  branch.py  commit.py  config.py  constants.py  diff.py  enums.py  exc.py  index.py  native_adaptation.py  object_.py  oid.py  reference.py  repository.py  revwalk.py  settings.py  signature.py  tag.py  tree.py  wrapper.py
rpmautospec/py2compat/: escape_tags.py  tagging.py
rpmautospec/subcommands/: changelog.py  convert.py  process_distgit.py  release.py
shell-completion/: rpmautospec.bash  rpmautospec.fish  rpmautospec.zsh
tests/: common.py  conftest.py  test_calc_release.py  test_next_build.py  test_release.py  test_rpmmacros.py  test_tag_package.py
tests/koji-output/list-builds/: gimp.json
tests/koji_plugin/: test_rpmautospec_builder.py  test_rpmautospec_hub.py  test_rpmautospec_plugin.py  test_rpmautospec_process_distgit_plugin.py  test_tag_in_pagure_plugin.py
tests/koji_plugins/: test_rpmautospec_builder.py  test_rpmautospec_hub.py
tests/rpmautospec/: __init__.py  conftest.py  test_changelog.py  test_cli.py  test_compat.py  test_exc.py  test_magic_comments.py  test_misc.py  test_pager.py  test_pkg_history.py  test_process_distgit.py  test_release.py  test_tag_package.py  test_util.py
tests/rpmautospec/_wrappers/: test_common.py
tests/rpmautospec/_wrappers/minigit2/: common.py  conftest.py  test_blob.py  test_commit.py  test_config.py  test_diff.py  test_index.py  test_object.py  test_oid.py  test_reference.py  test_repository.py  test_revwalk.py  test_settings.py  test_signature.py  test_tag.py  test_tree.py  test_wrapper.py
tests/rpmautospec/_wrappers/minirpm/_rpm/: test_header.py  test_spec.py  test_toplevel.py
tests/rpmautospec/cli/: test_base.py  test_click.py  test_dispatch.py  test_minimal.py  test_pager.py
tests/rpmautospec/minigit2/: common.py  conftest.py  test_blob.py  test_commit.py  test_config.py  test_diff.py  test_index.py  test_native_adaptation.py  test_object.py  test_oid.py  test_reference.py  test_repository.py  test_revwalk.py  test_settings.py  test_signature.py  test_tag.py  test_tree.py  test_wrapper.py
tests/rpmautospec/py2compat/: test_escape_tags.py  test_tagging.py
tests/rpmautospec/subcommands/: test_changelog.py  test_convert.py  test_process_distgit.py  test_release.py
tests/test-data/commitlog-to-changelog/: commit-1.txt  commit-2.txt  commit-3.txt  commit-4.txt  expected-1.yaml  expected-2.txt  expected-2.yaml  expected-3.txt  expected-4.txt
tests/test-data/commitlogs/: commit-4.txt  commit-5.txt  commit-6.txt  commit-7.txt  expected-1.txt  expected-3.yaml  expected-4.yaml  expected-5.yaml  expected-6.txt  expected-6.yaml  expected-7.txt  expected-7.yaml
tests/test-data/repodata/: .coverage  README.md  dummy-test-package-gloster.spec  dummy-test-package-gloster.spec.expected
tests/test-data/test-specfiles/: autochangelog-only.spec  autorelease-only.spec  both-macros.spec  no-macros.spec
