[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.9"

[tool.poetry]
name = "rpmautospec"
version = "0.7.2"
description = "A package and CLI tool to generate RPM release fields and changelogs."
authors = [
    "Pierre-Yves Chibon <pingou@pingoured.fr>",
    "Nils Philippsen <nils@redhat.com>",
    "Adam Saleh <asaleh@redhat.com>",
    "Stephen Coady <scoady@redhat.com>",
    "David Kirwan <dkirwan@redhat.com>",
    "Elliott Sales de Andrade <quantum.analyst@gmail.com>",
    "Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>",
    "Miro Hrončok <miro@hroncok.cz>",
]
maintainers = ["Fedora Infrastructure <admin@fedoraproject.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/fedora-infra/rpmautospec"
packages = [
    { include = "rpmautospec/**/*.py" },
]
include = [
    { path = "DCO.txt", format = "sdist" },
    { path = "rpm/macros.d/macros.rpmautospec", format = "sdist" },
    { path = "tests/**/*.py", format = "sdist" },
    { path = "tests/test-data/commitlogs/commit*.txt", format = "sdist" },
    { path = "tests/test-data/commitlogs/expected*.txt", format = "sdist" },
    { path = "tests/test-data/commitlogs/expected*.yaml", format = "sdist" },
    { path = "tests/test-data/repodata/dummy-test-package-gloster-git.tar.gz", format = "sdist" },
    { path = "tests/test-data/repodata/dummy-test-package-gloster.spec.expected", format = "sdist" },
    { path = "tests/test-data/test-specfiles/*.spec", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
]
exclude = [
    "**/.coverage",
]

[tool.poetry.dependencies]
python = "^3.9"
rpmautospec_core = "^0.1.4"
babel = "^2.8"
pygit2 = "^1.4.0"
rpm = "*"
click = "^8"
click-plugins = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pyyaml = "^5.3.1 || ^6"
pytest = "^6.2.2 || ^7 || ^8.0.0"
pytest-cov = "^4.0.0 || ^5.0.0"
pytest-xdist = [
    { version = "^2.5.0", python = ">=3.9.0,<3.12" },
    { version = "^2.5.0 || ^3", python = "^3.12" }
]
coverage = "^7.2.0"
ruff = "^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0"

[tool.poetry.scripts]
rpmautospec = "rpmautospec.cli:cli"

[tool.poetry.plugins."rpmautospec.cli"]
"calculate-release" = "rpmautospec.subcommands.release:calculate_release"
"convert" = "rpmautospec.subcommands.convert:convert"
"generate-changelog" = "rpmautospec.subcommands.changelog:generate_changelog"
"process-distgit" = "rpmautospec.subcommands.process_distgit:process_distgit"

[tool.poetry.build]
generate-setup-file = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
allowed-confusables = ["’"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"
tmp_path_retention_policy = "failed"

[tool.black]
line_length = 100
