[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpmautospec"
version = "0.7.3"
description = "A package and CLI tool to generate RPM release fields and changelogs."
license = {text = "MIT"}
authors = [
    {name = "Pierre-Yves Chibon", email = "pingou@pingoured.fr"},
    {name = "Nils Philippsen", email = "nils@redhat.com"},
    {name = "Adam Saleh", email = "asaleh@redhat.com"},
    {name = "Stephen Coady", email = "scoady@redhat.com"},
    {name = "David Kirwan", email = "dkirwan@redhat.com"},
    {name = "Elliott Sales de Andrade", email = "quantum.analyst@gmail.com"},
    {name = "Zbigniew Jędrzejewski-Szmek", email = "zbyszek@in.waw.pl"},
    {name = "Miro Hrončok", email = "miro@hroncok.cz"},
]
maintainers = [
    {name = "Fedora Infrastructure", email = "admin@fedoraproject.org"},
]
readme = "README.rst"
requires-python = "<4.0,>=3.9"
dependencies = [
    "rpmautospec-core<1.0.0,>=0.1.4",
    "pygit2<1.17.1,>=1.4.0; python_full_version >= \"3.9.0\" and python_full_version < \"3.10.0\"",
    "pygit2<2.0.0,>=1.4.0; python_full_version >= \"3.10.0\" and python_full_version < \"4.0.0\"",
    "rpm",
    "click<9,>=8",
    "click-plugins<2.0.0,>=1.1.1",
]

[dependency-groups]
dev = [
    "pyyaml<7.0.0,>=5.3.1",
    "pytest<9.0.0,>=6.2.2",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-xdist<3.7.0,>=2.5.0; python_version < \"3.12\" and python_full_version >= \"3.9.0\"",
    "pytest-xdist<4.0.0,>=2.5.0; python_version ~= \"3.12\"",
    "coverage<8.0.0,>=7.2.0",
    "ruff<0.11.2,>=0.2.0",
]

[project.urls]
repository = "https://github.com/fedora-infra/rpmautospec"

[project.entry-points."rpmautospec.cli"]
calculate-release = "rpmautospec.subcommands.release:calculate_release"
convert = "rpmautospec.subcommands.convert:convert"
generate-changelog = "rpmautospec.subcommands.changelog:generate_changelog"
process-distgit = "rpmautospec.subcommands.process_distgit:process_distgit"

[project.scripts]
rpmautospec = "rpmautospec.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["rpmautospec"]

[tool.hatch.build.targets.sdist]
include = [
    "README.rst",
    "LICENSE",
    "DCO.txt",
    "pyproject.toml",
    "rpmautospec/**/*.py",
    "rpm/macros.d/macros.rpmautospec",
    "tests/**/*.py",
    "tests/test-data/commitlogs/commit*.txt",
    "tests/test-data/commitlogs/expected*.txt",
    "tests/test-data/commitlogs/expected*.yaml",
    "tests/test-data/repodata/dummy-test-package-gloster-git.tar.gz",
    "tests/test-data/repodata/dummy-test-package-gloster.spec.expected",
    "tests/test-data/test-specfiles/*.spec",
    "tox.ini",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
allowed-confusables = ["’"]

[tool.ruff.lint.isort]
known-third-party = ["rpm"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"
tmp_path_retention_policy = "failed"

[tool.black]
line_length = 100
