[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpmautospec"
version = "0.8.2"
description = "A package and CLI tool to generate RPM release fields and changelogs."
license = "MIT AND GPL-2.0-only WITH GCC-exception-2.0 AND (MIT OR GPL-2.0-or-later WITH GCC-exception-2.0)"
license-files = ["licenses/*"]
authors = [
    {name = "Pierre-Yves Chibon", email = "pingou@pingoured.fr"},
    {name = "Nils Philippsen", email = "nils@redhat.com"},
    {name = "Adam Saleh", email = "asaleh@redhat.com"},
    {name = "Stephen Coady", email = "scoady@redhat.com"},
    {name = "David Kirwan", email = "dkirwan@redhat.com"},
    {name = "Elliott Sales de Andrade", email = "quantum.analyst@gmail.com"},
    {name = "Zbigniew Jędrzejewski-Szmek", email = "zbyszek@in.waw.pl"},
    {name = "Miro Hrončok", email = "miro@hroncok.cz"},
]
maintainers = [
    {name = "Fedora Infrastructure", email = "admin@fedoraproject.org"},
]
readme = "README.rst"
requires-python = "<4.0,>=3.9"
dependencies = ["rpmautospec-core<1.0.0,>=0.1.4"]

[project.optional-dependencies]
click = ["click<9,>=8"]
pygit2 = [
    "pygit2<1.18.1,>=1.4.0; python_full_version >= \"3.9.0\" and python_full_version < \"3.10.0\"",
    "pygit2<2.0.0,>=1.4.0; python_full_version >= \"3.10.0\" and python_full_version < \"4.0.0\"",
]
rpm = ["rpm"]
all = [
    "click<9,>=8",
    "pygit2<1.18.1,>=1.4.0; python_full_version >= \"3.9.0\" and python_full_version < \"3.10.0\"",
    "pygit2<2.0.0,>=1.4.0; python_full_version >= \"3.10.0\" and python_full_version < \"4.0.0\"",
    "rpm",
]

[dependency-groups]
dev = [
    "pygit2<1.18.1,>=1.4.0; python_full_version >= \"3.9.0\" and python_full_version < \"3.10.0\"",
    "pygit2<2.0.0,>=1.4.0; python_full_version >= \"3.10.0\" and python_full_version < \"4.0.0\"",
    "pyyaml<7.0.0,>=5.3.1",
    "pytest<9.0.0,>=6.2.2",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-xdist<3.8.1,>=2.5.0; python_version < \"3.12\" and python_full_version >= \"3.9.0\"",
    "pytest-xdist<4.0.0,>=2.5.0; python_version ~= \"3.12\"",
    "ruff<0.12.3,>=0.2.0",
    "coverage<7.9.3,>=7.2.0",
    "coverage-conditional-plugin>=0.9.0",
    "click<9,>=8",
    "rpm",
]
test = [
    "pyyaml<7.0.0,>=5.3.1",
    "pytest<9.0.0,>=6.2.2",
    "pytest-cov>=4.0.0,<7.0.0",
    "pytest-xdist<3.8.1,>=2.5.0; python_version < \"3.12\" and python_full_version >= \"3.9.0\"",
    "pytest-xdist<4.0.0,>=2.5.0; python_version ~= \"3.12\"",
    "ruff<0.12.3,>=0.2.0",
    "coverage<7.9.3,>=7.2.0",
    "coverage-conditional-plugin>=0.9.0",
]

[project.urls]
repository = "https://github.com/fedora-infra/rpmautospec"

[project.scripts]
rpmautospec = "rpmautospec.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["rpmautospec"]

[tool.hatch.build.targets.sdist]
include = [
    "README.rst",
    "LICENSE",
    "DCO.txt",
    "pyproject.toml",
    "rpmautospec/**/*.py",
    "rpm_macros.d/macros.rpmautospec",
    "tests/**/*.py",
    "tests/test-data/commitlogs/commit*.txt",
    "tests/test-data/commitlogs/expected*.txt",
    "tests/test-data/commitlogs/expected*.yaml",
    "tests/test-data/repodata/dummy-test-package-gloster-git.tar.gz",
    "tests/test-data/repodata/dummy-test-package-gloster.spec.expected",
    "tests/test-data/test-specfiles/*.spec",
    "tox.ini",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
allowed-confusables = ["’"]

[tool.ruff.lint.isort]
known-third-party = ["rpm"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--cov --cov-config .coveragerc --cov-report term --cov-report xml --cov-report html"
tmp_path_retention_policy = "failed"

[tool.black]
line_length = 100

[tool.coverage.run]
branch = true
source = ["rpmautospec"]
omit = []
plugins = ["coverage_conditional_plugin"]

[tool.coverage.report]
precision = 2
fail_under = 100
exclude_also = [
    "def __repr__",
    'if log.isEnabledFor\([^\)]*\):',
    "if TYPE_CHECKING:",
    "@overload",
]
show_missing = true

[tool.coverage.coverage_conditional_plugin.omit]
"not is_installed('click')" = "rpmautospec/cli/click.py"

[tool.coverage.coverage_conditional_plugin.rules]
"has-no-py310" = "sys_version_info >= (3, 10)"
"has-py310" = "sys_version_info < (3, 10)"
"has-no-click" = "is_installed('click')"
"has-click" = "not is_installed('click')"
"has-no-pygit2" = "is_installed('pygit2')"
"has-pygit2" = "not is_installed('pygit2')"
"has-no-rpm" = "is_installed('rpm')"
"has-rpm" = "not is_installed('rpm')"
